Add bad credentials error and a lot of doc
