# src/utils/ErrorTypes.ts
@@ -3,6 +3,7 @@ enum ErrorTypes {
   EMAIL_ALREADY_TAKEN = "EMAIL_ALREADY_TAKEN",
   BAD_REQUEST = "BAD_REQUEST",
   // 401
+  BAD_CREDENTIALS = "BAD_CREDENTIALS",
   TOKEN_ERROR = "TOKEN_ERROR", // TODO-MV : will be replaced and clarified
   // 403
   ACCESS_FORBIDDEN = "ACCESS_FORBIDDEN",
